tests/snapshots/golden_snapshot_tests__golden_handshake_event_jsonl.snap
---
source: tests/golden_snapshot_tests.rs
expression: line.trim()
---
{"t":"event","ref_id":"run-001","event":{"ts":"2025-01-15T12:00:00Z","type":"assistant_delta","text":"Hello"}}
