tests/snapshots/golden_snapshot_tests__golden_handshake_fatal_jsonl.snap
---
source: tests/golden_snapshot_tests.rs
expression: line.trim()
---
{"t":"fatal","ref_id":"run-001","error":"process killed"}
