tests/snapshots/golden_snapshot_tests__golden_handshake_run_jsonl.snap
---
source: tests/golden_snapshot_tests.rs
expression: redacted
---
{"t":"run","id":"run-001","work_order":{"id":"[uuid]","task":"Fix the login bug","lane":"patch_first","workspace":{"root":".","mode":"staged","include":[],"exclude":[]},"context":{"files":[],"snippets":[]},"policy":{"allowed_tools":[],"disallowed_tools":[],"deny_read":[],"deny_write":[],"allow_network":[],"deny_network":[],"require_approval_for":[]},"requirements":{"required":[]},"config":{"model":null,"vendor":{},"env":{},"max_budget_usd":null,"max_turns":null}}}
