tests/snapshots/golden_snapshot_tests__golden_policy_composed_allow.snap
---
source: tests/golden_snapshot_tests.rs
expression: d
---
{
  "type": "allow",
  "reason": "matched allowlist"
}
