tests/snapshots/golden_snapshot_tests__golden_policy_composed_deny.snap
---
source: tests/golden_snapshot_tests.rs
expression: d
---
{
  "type": "deny",
  "reason": "matched denylist"
}
