tests/snapshots/golden_snapshot_tests__golden_policy_decision_allow.snap
---
source: tests/golden_snapshot_tests.rs
expression: d
---
{
  "allowed": true,
  "reason": null
}
