tests/snapshots/golden_snapshot_tests__golden_policy_decision_deny.snap
---
source: tests/golden_snapshot_tests.rs
expression: d
---
{
  "allowed": false,
  "reason": "tool Bash is disallowed"
}
