tests/snapshots/golden_snapshot_tests__golden_policy_profile_empty.snap
---
source: tests/golden_snapshot_tests.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
