tests/snapshots/golden_snapshot_tests__golden_policy_profile_network_only.snap
---
source: tests/golden_snapshot_tests.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [
    "*.github.com"
  ],
  "deny_network": [
    "*.malware.com",
    "*.tracking.io"
  ],
  "require_approval_for": []
}
